# scraping_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
tav_utils/: common.py  logger.py  selenium_utils.py
