[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tav-utils"
version = "0.1.0"
description = "Reusable scraping utilities (logger, selenium tools, common helpers)"
authors = [
    { name="Md Abdullah All Mamun", email="mamun700263@email.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/TAVDEV-team/scraping_utils"

[tool.setuptools.packages.find]
where = ["."]
